# Attempt101

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
core/src/logic/: CMakeLists.txt  move.cpp  movelist.cpp  position.cpp
desktop/: CMakeLists.txt  Dockerfile  Makefile
desktop/.devcontainer/: devcontainer.json
desktop/assets/configs/: board_config.json  static_config.json  window_config.json
desktop/sfml-deps/: install.sh  remove.sh
desktop/src/: main.cpp
desktop/src/application/: view.cpp  view.hpp
desktop/src/components/: CMakeLists.txt
desktop/src/components/game/: view.cpp  view.hpp
desktop/src/components/ui/board/: view.hpp
desktop/src/components/ui/piece/: view.cpp  view.hpp
desktop/src/controllers/: CMakeLists.txt
desktop/src/controllers/ai/: view.cpp  view.hpp
desktop/src/controllers/game/: logic.cpp  logic.hpp  view.cpp  view.hpp
desktop/src/controllers/input/: view.cpp  view.hpp
desktop/src/controllers/ui/board/: view.cpp  view.hpp
desktop/src/controllers/user/ai/: view.cpp  view.hpp
desktop/src/controllers/user/human/: view.cpp  view.hpp
desktop/src/event/: CMakeLists.txt
desktop/src/event/bus/: view.cpp  view.hpp
desktop/src/event/models/: error_event.hpp  event_type.hpp  mouse_event.hpp  piece_event.hpp  position_event.hpp
desktop/src/resources/: CMakeLists.txt
desktop/src/resources/config_manager/: view.cpp  view.hpp
desktop/src/resources/textures_manager/: view.cpp  view.hpp
desktop/src/scene/: CMakeLists.txt  idle.hpp
desktop/src/scene/game/: view.cpp  view.hpp
desktop/src/scene/manager/: view.cpp  view.hpp
desktop/src/ui/: CMakeLists.txt
desktop/src/ui/board/: manager.cpp  manager.hpp  view.cpp  view.hpp
desktop/src/ui/entity/: view.cpp  view.hpp
desktop/src/ui/models/: entity.hpp  square.cpp  square.hpp
desktop/src/ui/piece/: manager.cpp  manager.hpp  selected.cpp  selected.hpp  view.cpp  view.hpp
desktop/src/ui/scene/: view.cpp  view.hpp
desktop/src/ui/window/: view.cpp  view.hpp
libs/: CMakeLists.txt  Makefile
libs/engine/: CMakeLists.txt  main.cpp
libs/engine/include/: eval.hpp
libs/engine/src/: eval.cpp  eval.hpp  search.cpp  search.hpp
libs/include/engine/: engine.hpp  eval.hpp  moveordering.hpp  pick.hpp  search.hpp  timer.hpp  tt.hpp
libs/include/logic/: bitboard.hpp  defs.hpp  move.hpp  movelist.hpp  position.hpp  storage.hpp  zobrist.hpp
libs/include/manager/: logic.hpp
libs/logic/: CMakeLists.txt
libs/logic/src/: attack.cpp  defs.cpp  move.cpp  move.hpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  square.cpp  square.hpp  storage.cpp
libs/logic/tests/: main.cpp  test_movegen.cpp  test_movegen.hpp
libs/logic/tests/tests_data/: test_node6.txt
libs/manager/: view.cpp  view.hpp
libs/src/engine/: CMakeLists.txt  engine.cpp  eval.cpp  moveordering.cpp  pick.cpp  search.cpp  timer.cpp  tt.cpp
libs/src/logic/: movelist.cpp  position.cpp  storage.cpp  zobrist.cpp
libs/src/manager/: CMakeLists.txt  logic.cpp
libs/tests/: CMakeLists.txt  main.cpp  test_movegen.cpp  test_movegen.hpp
libs/tests/data/: test_node4.txt
libs/tests/logic/: CMakeLists.txt  main.cpp
libs/tests/logic/movegen/: CMakeLists.txt  test.cpp  test.hpp
libs/tests/src/: main.cpp  test_node_counter.cpp  test_repetion.cpp  test_tt.cpp  test_zobrist.cpp
libs/tests/tests_data/: test_branch1.txt  test_branch2.txt
src/: main.cpp  (+1 more)
src/core/logic/: CMakeLists.txt  attack.cpp  attack.hpp  bitboard.cpp  bitboard.hpp  defs.cpp  defs.hpp  move.hpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  square.cpp  square.hpp  storage.cpp  storage.hpp  zobrist.cpp
src/game-logic/logic/: CMakeLists.txt
src/game-logic/logic/.cache/clangd/index/: attack.cpp.7110A886BAE6EB50.idx  (+20 more)
src/game-logic/logic/src/: attack.cpp  attack.hpp  bitboard.cpp  bitboard.hpp  defs.cpp  defs.hpp  move.cpp  move.hpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  square.hpp  storage.cpp  storage.hpp  zobrist.cpp  zobrist.hpp
src/game-logic/logic/tests/: main.cpp
src/game-logic/logic/tests/tests_data/: test_node1.txt  test_node2.txt  test_node5.txt
src/game-logic/logic/v2/src/: attack.cpp  attack.hpp  bitboard.cpp  bitboard.hpp  defs.cpp  defs.hpp  move.hpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  square.cpp  square.hpp  storage.cpp
src/game-logic/models/: CMakeLists.txt
src/game-logic/models/match/: view.cpp  view.hpp
src/game-logic/models/message/request/: view.hpp
src/game-logic/models/player/: view.cpp  view.hpp
src/game/handlers/: CMakeLists.txt
src/game/handlers/request/: view.cpp  view.hpp
src/game/handlers/response/: view.cpp  view.hpp
src/game/models/: CMakeLists.txt
src/game/models/match/: view.cpp  view.hpp
src/game/models/player/: view.cpp  view.hpp
src/libs/logic/: CMakeLists.txt
src/libs/logic/src/: attack.cpp  attack.hpp  defs.cpp  defs.hpp  movelist.cpp  movelist.hpp  position.cpp  position.hpp  square.cpp  square.hpp  storage.hpp  zobrist.hpp
src/libs/logic/tests/: test_movegen.cpp  test_movegen.hpp
src/libs/logic/tests/tests_data/: test_node3.txt
src/scene/game/: CMakeLists.txt  scene.cpp  scene.hpp
src/scene/game/event/: game-started.hpp  game-updates.hpp  mouse.hpp  promotion.hpp
src/scene/game/handler/: ai.cpp  ai.hpp  game.cpp  game.hpp  ui.cpp  ui.hpp
src/scene/game/state/: in-progress.hpp  machine.hpp
src/scene/game/state/board/: idle.cpp  idle.hpp  in-progress.cpp  in-progress.hpp  piece-selected.cpp  piece-selected.hpp
src/scene/game/state/piece/: idle.cpp  idle.hpp  in-progress.cpp  in-progress.hpp  piece-grabbed.cpp  piece-grabbed.hpp  piece-selected.cpp  piece-selected.hpp
src/scene/game/state/promotion/: idle.cpp  idle.hpp  in-progress.cpp  in-progress.hpp
src/ui/: CMakeLists.txt
src/ui/model/: highlight.hpp  options.cpp  options.hpp
src/ui/renderer/: board.cpp  board.hpp  pieces.cpp  pieces.hpp  promotion.cpp  promotion.hpp
src/ui/resources/: colors.cpp  colors.hpp  text.cpp  text.hpp  textures.cpp  textures.hpp
src/ui/utils/: cellsize.cpp  cellsize.hpp  quad.cpp  quad.hpp
(+104 files in other folders)
